--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="game-container">
   <div id="scoreDisplay">Score: 0</div>
-
+ <div id="hpBar"></div>
     <!-- Joystick container -->
     <div class="zone" id="joystick">
       <div class="stick"></div>
