--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <title>Free Roaming Game with Joystick</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://unpkg.com/nipplejs"></script>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script> 
 </head>
 <body>
   <div class="game-container">
@@ -40,8 +41,13 @@
 
     <div id="skillFramesOverlay"></div>
 
+ <div id="gameOverScreen">
+  <h1>Game Over</h1>
+  <button id="restartButton">Restart</button>
+</div>
 
   </div>
+  
   <script src="script.js"></script>
 </body>
 </html>
